--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,23 +4,20 @@
       "imageSrc": "projects/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
       "skills": ["XML", "Java"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "source": "https://github.com/TahaHussain-00/Programming-Quiz"
     },
     {
       "title": "Unit Conversion App",
       "imageSrc": "projects/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
       "skills": ["XML", "Java"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "source": "https://github.com/TahaHussain-00/Unit-Conversion-App"
     },
     {
       "title": "Spotify Clone",
       "imageSrc": "projects/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
       "skills": ["HTML", "CSS"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "source": "https://github.com/TahaHussain-00/Spotify-Clone"
     }
   ]
