--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage": "https://tahahussain-00.github.io/My-Portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
